--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -10,9 +10,60 @@
         color: var(--green-color-one);
     }
 
+    .main-right-bottom {
+        flex-direction: column;
+        height: 550px;
+        display: flex;
+    }
+
+    #cancelled p {
+        color: var(--green-color-two);
+        font-weight: bold;
+    }
+
+    #cancelled .line {
+        background-color: var(--green-color-two);
+    }
+
+    .main-right-bottom-three {
+        display: flex;
+        justify-content: center;
+        height: 550px;
+    }
+
+    .main-right-bottom-three-content {
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main-right-bottom-three-content img {
+        width: 450px;
+        height: 430px;
+    }
+
+    .main-right-bottom-three-content h1 {
+        font-size: 23px;
+        color: #333;
+        font-weight: 550;
+    }
+
+    .main-right-bottom-three-content p {
+        font-size: 18px;
+        margin-top: 7px;
+        color: #7c7c7d;
+    }
+
+    .map-locations {
+        width: 85%;
+        height: 90%;
+        border-radius: 10px;
+    }
+
     .table-row {
         height: 55px;
-        grid-template-columns: 11% 10% 10% 15% 11% 13% 40%;
+        grid-template-columns: 11% 10% 9% 11% 14% 12% 12% 21%;
     }
 
     .table td {
@@ -20,38 +71,46 @@
     }
 
     .table-header {
-        grid-template-columns: 11% 10% 9% 13% 10% 12% 17% 9% 9%;
+        grid-template-columns: 11% 10% 9% 11% 14% 12% 12% 21%;
     }
 
     td img {
-        width: 25px;
+        margin: 7px;
         height: 25px;
-        cursor: pointer;
+        width: 25px;
     }
 
-    /* location */
+   
+
+    /*Location popup*/
     .location_pop {
-        display: none;
+        display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: 2;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
+
+    .location_pop.active {
+        transform: translate(-50%, -50%) scale(1);
     }
 
     .location_pop_content {
-        width: 47%;
-        height: 55%;
+        width: 700px;
         padding: 10px;
         background-color: #f1f2f6;
         border-radius: 10px;
         padding: 20px;
         padding-bottom: 40px;
+        height: 350px;
+        overflow: hidden;
     }
 
     .location_pop_map {
@@ -69,43 +128,57 @@
 
     .location_close button {
         background-color: #ff4757;
-        height: 28px;
         color: #fff;
         cursor: pointer;
         border: none;
         font-size: 16px;
         border-radius: 5px;
         width: 85px;
+        height: 28px;
     }
+
+    
 
     /*request details*/
     .request-details-pop {
+        
+        display: flex;
         position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: 2;
-        display: none;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 3;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100%;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: #333;
+       
+    }
+
+    .request-details-pop.active {
+        transform: translate(-50%, -50%) scale(1);
+        background-color: rgba(0, 0, 0, 0);
     }
 
     .request-details-pop-form {
-        width: 45%;
+        width: 500px;
         background: white;
         border-radius: 6px;
         top: 0;
         position: relative;
         text-align: center;
-        padding: 30px;
+        padding: 20px;
         color: #333;
         display: flex;
         align-items: center;
         justify-content: center;
         transition: transform 0.4s, top 0.4s;
         flex-direction: column;
+
     }
 
     .request-details-pop-form-top {
@@ -119,8 +192,11 @@
     .request-details-pop-form-close {
         width: 25px;
         height: 25px;
-        margin-left: 100%;
-        margin-top: -3%;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        height: 20px;
         cursor: pointer;
     }
 
@@ -131,10 +207,12 @@
     .request-details-pop-form-content {
         display: grid;
         grid-template-columns: 30% 70%;
-        width: 80%;
+        width: 95%;
         background-color: white;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         border-radius: 6px;
+        margin-bottom: 10px;
+
     }
 
     .request-details-topic::before {
@@ -145,42 +223,47 @@
         margin-bottom: 15px;
         height: 4px;
         width: 67px;
-        background: #1B6652;
+        background: var(--green-color-one);
+
     }
 
-    .personal-details-right-labels {
+    .request-details-right-labels {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         padding-top: 40px;
+        padding-left: 40px;
         padding-bottom: 50px;
-        padding-left: 25px;
+       
     }
 
-    .personal-details-right-labels span {
+    .request-details-right-labels span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #7c7c7d;
     }
 
-    .personal-details-right-values {
+    .request-details-right-values {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         padding-top: 40px;
+        padding-left: 90px;
         padding-bottom: 50px;
-        padding-left: 32px;
+       
     }
 
-    .personal-details-right-values span {
+    .request-details-right-values span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #767e95;
         font-weight: 550;
     }
 
+
     /* ------------*/
+
 
 }
