--- a/public/css/Component/Collector/Collector_Request_Completed.css
+++ b/public/css/Component/Collector/Collector_Request_Completed.css
@@ -394,123 +394,187 @@
 
   }
 
-  /*collect details*/
+ 
+    /*collect details*/
+    .collect-details-pop {
+      display: flex;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      z-index: 4;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      overflow: hidden;
+      transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+      box-shadow: var(--box-shadow);
+      border-radius: 10px;
+  }
 
-  .collect-details-pop {
-    display: flex;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    z-index: 4;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    overflow: hidden;
-    transition: transform 0.4s ease-in, background-color 0.4s ease-in;
-    box-shadow: var(--box-shadow);
-    border-radius: 10px;
-}
+  .collect-details-pop.active {
+      transform: translate(-50%, -50%) scale(1);
+  }
 
-.collect-details-pop.active {
-    transform: translate(-50%, -50%) scale(1);
-}
+  .collect-details-pop-form {
+      box-sizing: border-box;
+      width: 100%;
+      background: var(--background-color-main);
+      border-radius: 10px !important;
+      top: 0;
+      position: relative;
+      text-align: center;
+      padding: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: transform 0.4s, top 0.4s;
+      flex-direction: column;
+      color: var(--main-text-color);
+  }
 
-.collect-details-pop-form {
-    box-sizing: border-box;
-    width: 100%;
-    background: var(--background-color-main);
-    border-radius: 10px !important;
-    top: 0;
-    position: relative;
-    text-align: center;
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.4s, top 0.4s;
-    flex-direction: column;
-    color: var(--main-text-color);
-}
+  .collect-details-pop-form-top {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 25px;
+      font-size: 18px;
+  }
 
-.collect-details-pop-form-top {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 25px;
-    font-size: 18px;
-}
+  .collect-details-topic::before {
+      content: '';
+      position: absolute;
+      margin-top: 25px;
+      margin-left: 40px;
+      margin-bottom: 15px;
+      height: 3px;
+      width: 75px;
+      background: var(--green-color-one);
+  }
 
-.collect-details-topic::before {
-    content: '';
-    position: absolute;
-    margin-top: 28px;
-    margin-left: 40px;
-    margin-bottom: 15px;
-    height: 4px;
-    width: 75px;
-    background: var(--green-color-two);
-}
+  .collect-details-pop-form-close {
+      width: 25px;
+      height: 25px;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+  }
 
-.collect-details-pop-form-close {
-    width: 25px;
-    height: 25px;
-    margin-left: 600px;
-    margin-top: -3%;
-    cursor: pointer;
-}
+  .collect-details-pop-form-content {
+      display: grid;
+      grid-template-columns: 70% 30%;
+      width: 80%;
+      background: var(--background-color-main);
+      box-shadow: var(--box-shadow);
+      border-radius: 10px;
+      padding: 10px 40px;
+      height: 300px;
+  }
 
-.collect-details-pop-form-content {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    width: 80%;
-    background: var(--background-color-main);
-    box-shadow: var(--box-shadow);
-    border-radius: 10px;
-    padding: 10px;
-    height: 300px;
-}
+  .collect-details-pop-form-content span {
+      width: 250px;
+  }
 
-.collect-details-pop-form-content span {
-    width: 250px;
-}
+  .collect-details-pop-form-content-labels {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+  }
 
-.collect-details-pop-form-content-labels {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+  .collect-details-pop-form-content-labels h3 {
+      font-weight: 300;
+      font-size: 14px;
+      margin-bottom: 5%;
+      width: 300px;
+      text-align: left;
+      margin-left: 20%;
+      color: #7c7c7d;
+  }
 
-.collect-details-pop-form-content-labels h3 {
-    font-weight: 300;
-    font-size: 14px;
-    margin-bottom: 5%;
-    width: 300px;
-    text-align: left;
-    margin-left: 45%;
-}
+  .collect-details-pop-form-content-right-values {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      justify-content: center;
+  }
 
-.collect-details-pop-form-content-right-values {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+  /* .collect-details-pop-form-content-right-values-cont h3 {
+      
+  } */
 
-.collect-details-pop-form-content-right-values-cont h3 {
-    width: 45px;
-}
+  .collect-details-pop-form-content-right-values-cont {
+      display: flex;
+      margin-bottom: 11%;
+      
+  }
 
-.collect-details-pop-form-content-right-values-cont {
-    display: flex;
-    margin-bottom: 4%;
-}
+  .collect-details-pop-form-content-right-values h3 {
+      font-size: 14px;
+      color: #767e95;
+      font-weight: 550;
+      
+  }
 
-.collect-details-pop-form-content-right-values h3 {
-    font-weight: 300;
-    font-size: 14px;
-}
+
+  
+    /*Location popup*/
+    .location_pop {
+      display: flex;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      background-color: rgba(0, 0, 0, 0);
+      z-index: 4;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      overflow: hidden;
+      transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+  }
+
+  .location_pop.active {
+      transform: translate(-50%, -50%) scale(1);
+  }
+
+  .location_pop_content {
+      width: 700px;
+      padding: 10px;
+      background-color: #f1f2f6;
+      border-radius: 10px;
+      padding: 20px;
+      padding-bottom: 40px;
+      height: 350px;
+      overflow: hidden;
+  }
+
+  .location_pop_map {
+      width: 100;
+      height: 100%;
+      border-radius: 10px;
+  }
+
+  .location_close {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 6px;
+  }
+
+  .location_close button {
+      background-color: #ff4757;
+      color: #fff;
+      cursor: pointer;
+      border: none;
+      font-size: 16px;
+      border-radius: 5px;
+      width: 85px;
+      height: 28px;
+  }
 
 
 
