--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -450,13 +450,19 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-
     }
 
     .main-right-bottom-content-content {
       width: 300px;
-      /* margin-bottom: 20px; */
       position: relative;
+    }
+
+    .user-details-cont {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      width: 100%;
+      height: 300px;
+      overflow: scroll;
     }
 
     .details {
@@ -465,7 +471,6 @@
       margin-bottom: 5px;
       text-align: left;
       font-size: 15px;
-
     }
 
     .input-container {
@@ -477,7 +482,7 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      left: 10px;
+      left: 20px;
       color: #555;
     }
 
@@ -492,14 +497,19 @@
       left: 0;
     }
 
+    .main-right-bottom-content-content {
+      width: 100%;
+      margin: 5px solid red;
+    }
+
     .main-right-bottom-content-content input {
       height: 35px;
       width: 85%;
       outline: none;
       border-radius: 5px;
       border: 1px solid #ccc;
-      padding-left: 35px;
       font-size: 14px;
+      padding-left: 45px;
       transition: all 0.3s ease;
     }
 
@@ -658,6 +668,11 @@
     margin-bottom: 30px;
   }
 
+  .pop_up_confirm_collect .details {
+    overflow: scroll;
+    height: 280px;
+  }
+
   .pop_up_confirm_collect_cont .cont h5 {
     font-size: 16px;
     width: 150px;
@@ -682,7 +697,6 @@
     font-weight: 600;
   }
 
-
   .pop_up_confirm_collect_cont .buttons .complete-btn {
     width: 200px;
     height: 50px;
@@ -697,7 +711,6 @@
   }
 
   .pop_up_confirm_collect_cont .buttons .complete-btn:hover {
-
     background-color: #269074;
   }
 
