--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -499,7 +499,9 @@
 
     .main-right-bottom-content-content {
       width: 100%;
+      box-sizing: border-box;
       margin: 5px solid red;
+      padding-right: 25px;
     }
 
     .main-right-bottom-content-content input {
@@ -540,7 +542,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 100%;
       height: 50px;
     }
 
@@ -551,7 +552,7 @@
     .form-button button[type="submit"] {
       height: 40px;
       outline: none;
-      width: 350px;
+      width: 300px;
       color: white;
       font-size: 17px;
       font-weight: 500;
@@ -568,7 +569,7 @@
     }
 
     .cancel-button {
-      width: 290px;
+      width: 300px;
       height: 40px;
       outline: none;
       color: white;
