--- a/public/css/Component/Collector/Collector_assistants-main.css
+++ b/public/css/Component/Collector/Collector_assistants-main.css
@@ -202,27 +202,31 @@
         background: rgb(28, 79, 64);
     }
 
-
     .delete_confirm {
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
+        top: 50% !important;
+        left: 50% !important;
+        z-index: 3 !important;
         display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
         height: 100%;
+        transform: translate(-50%, -50%) scale(0);
+        transition: transform 0.4s ease-in;
+        background-color: transparent !important;
+
+    }
+
+    .delete_confirm.active {
+        transform: translate(-50%, -50%) scale(1);
     }
 
     .popup {
         width: 400px;
         background: white;
         border-radius: 6px;
-        top: 0;
+        top: 1111;
         text-align: center;
         padding: 0 30px 30px;
         color: #333;
@@ -388,16 +392,33 @@
 
     .update_click {
         position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: 2;
+        top: 50%;
+        left: 50%;
+        z-index: 4 !important;
         display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
         height: 100%;
+        transform: translate(-50%, -50%) scale(0);
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
     }
+
+    .update_click.active {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2 !important;
+        display: none;
+    }
+
 
     .form {
         display: flex;
