--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -77,34 +77,27 @@
 
         .main-bottom-component {
             width: 65%;
-            height: 80%;
+            height: auto;
             box-shadow: var(--box-shadow2);
             border-radius: 10px;
             padding: 40px;
-            display: grid;
-            grid-template-columns: 50% 50%;
-        }
-
-        .main-bottom-component-right {
+            box-sizing: border-box;
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
-        .main-bottom-component-right img {
-            width: 100%;
-            height: 95%;
-            box-shadow: var(--box-shadow2);
-            border-radius: 10px;
-        }
-
         .main-bottom-component-left {
             display: flex;
+            justify-content: center;
             flex-direction: column;
+            width: 100%;
+            height: 100%;
+            box-sizing: border-box;
         }
 
         .main-bottom-component-left-topic {
-            margin-bottom: 35px;
+            margin-bottom: 25px;
         }
 
         .line {
@@ -118,7 +111,7 @@
             font-size: 21px;
             font-weight: 500;
             letter-spacing: 0.01rem;
-
+            margin-top: 10px;
         }
 
         .main-bottom-component-left-component {
@@ -148,7 +141,7 @@
 
         .main-bottom-component-left-component input {
             height: 29px;
-            width: 80%;
+            width: 98%;
             outline: none;
             border-radius: 5px;
             border: 1px solid #ccc;
@@ -181,13 +174,12 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            margin-top: 5px;
         }
 
         .main-bottom-component-left button {
-            height: 33px;
+            height: 40px;
             margin-top: 10px;
-            width: 83%;
+            width: 100%;
             outline: none;
             font-size: 15px;
             font-weight: 500;
@@ -199,11 +191,6 @@
             color: var(--background-color-main);
             transition: background-color 0.6s ease-in;
         }
-
-        .main-bottom-component-left button:hover {
-            background: #19954e;
-        }
-
 
         /*Success popup*/
         .complain_success {
