--- a/public/css/Component/Admin/Admin_Center_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Add.css
@@ -8,7 +8,7 @@
 
     }
 
-    
+
     #centers i {
         color: var(--green-color-one);
     }
@@ -232,7 +232,7 @@
 
     }
 
-    .popup button:hover{
+    .popup button:hover {
         background: var(--button-hover-green);
     }
 
@@ -291,8 +291,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 3;
         display: none;
         align-items: center;
         justify-content: center;
@@ -300,11 +300,14 @@
     }
 
     #map {
-        width: 75%;
-        height: 75%;
-        border: 2px solid #3498db;
+        width: 700px;
+        padding: 10px;
+        background-color: #f1f2f6;
         border-radius: 10px;
-        margin-bottom: 15px;
+        padding: 20px;
+        padding-bottom: 40px;
+        height: 350px;
+        overflow: hidden;
     }
 
     .buttons-container {
@@ -312,7 +315,6 @@
         align-items: center;
         justify-content: center;
         width: 30%;
-        background-color: #2c3e50;
 
     }
 
