--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -263,16 +263,7 @@
 
     /*Assign popup*/
     .View {
-        /* display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: 2;
-        align-items: center;
-        justify-content: center; */
+        
         display: flex;
         position: fixed;
         top: 50%;
@@ -286,7 +277,7 @@
         transition: transform 0.4s ease-in, background-color 0.4s ease-in;
         box-shadow: var(--box-shadow);
         border-radius: 10px;
-        background-color: #333;
+        background-color: var(--main-text-color);
 
     }
 
@@ -401,6 +392,7 @@
         border-radius: 10px;
         text-align: center;
         margin-bottom: 17px;
+       
     }
 
     #dropdown:hover {
@@ -419,10 +411,28 @@
     #dropdown option {
         padding: 8px;
         font-family: Arial, Helvetica, sans-serif;
+        transition: background-color 0.3s ease;
+        
     }
 
     #dropdown option:hover {
         background-color: #f0f0f0;
+    }
+
+    .assigned_count{
+        position: absolute;
+        right: 10px;
+        top: 50%;
+       
+        width: 20px; /* Set the width */
+        height: 20px; /* Set the height */
+        border-radius: 50%; /* Create a circular border */
+        background-color: var(--green-color-one); /* Set the background color */
+        border: 2px solid #000; /* Set the border color and width */
+        color: #fff; /* Set the text color */       
+        display: flex;
+        align-items: center;
+        
     }
 
     @media screen and (max-width:862px) {
