--- a/public/css/Component/CenterManager/CenterManager_Waste_Management.css
+++ b/public/css/Component/CenterManager/CenterManager_Waste_Management.css
@@ -251,13 +251,13 @@
     }
 
     .table-header {
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 20% ;
+        grid-template-columns: 25% 25% 25% 25% ;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 20% ;
+        grid-template-columns:  25% 25% 25% 25% ;
     }
 
     .table td {
@@ -321,7 +321,7 @@
         cursor: pointer;
         border: none;
         letter-spacing: 1px;
-        background: #1B6652;
+        background: var(--green-color-one);
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
         margin-bottom: 20px;
         margin-top: 20px;
@@ -329,9 +329,143 @@
 
 
     .main-right-bottom-two-content button:hover {
-        background: rgb(28, 79, 64);
+        background: var(--button-hover-green);
     }
 
+  /*collect details*/
+  .collect-details-pop {
+    display: flex;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    z-index: 4;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    box-shadow: var(--box-shadow);
+    border-radius: 10px;
+}
+
+.collect-details-pop.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.collect-details-pop-form {
+    box-sizing: border-box;
+    width: 100%;
+    background: var(--background-color-main);
+    border-radius: 10px !important;
+    top: 0;
+    position: relative;
+    text-align: center;
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.4s, top 0.4s;
+    flex-direction: column;
+    color: var(--main-text-color);
+}
+
+.collect-details-pop-form-top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 25px;
+    font-size: 18px;
+}
+
+.collect-details-topic::before {
+    content: '';
+    position: absolute;
+    margin-top: 25px;
+    margin-left: 40px;
+    margin-bottom: 15px;
+    height: 3px;
+    width: 75px;
+    background: var(--green-color-one);
+}
+
+.collect-details-pop-form-close {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.collect-details-pop-form-content {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    width: 80%;
+    background: var(--background-color-main);
+    box-shadow: var(--box-shadow);
+    border-radius: 10px;
+    padding: 10px 40px;
+    height: 300px;
+}
+
+.collect-details-pop-form-content span {
+    width: 250px;
+}
+
+.collect-details-pop-form-content-labels {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.collect-details-pop-form-content-labels h3 {
+    font-weight: 300;
+    font-size: 14px;
+    margin-bottom: 5%;
+    width: 300px;
+    text-align: left;
+    margin-left: 20%;
+    color: #7c7c7d;
+}
+
+.collect-details-pop-form-content-right-values {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+/* .collect-details-pop-form-content-right-values-cont h3 {
+    
+} */
+
+.collect-details-pop-form-content-right-values-cont {
+    display: flex;
+    margin-bottom: 11%;
+    
+}
+
+.collect-details-pop-form-content-right-values h3 {
+    font-size: 14px;
+    color: #767e95;
+    font-weight: 550;
+    
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.1);
+    z-index: 2;
+    display: none;
+}
 
     @media screen and (max-width: 1178px) {
         .image2 {
