--- a/public/css/Component/Admin/Admin_Dashboard.css
+++ b/public/css/Component/Admin/Admin_Dashboard.css
@@ -809,7 +809,7 @@
 
     .fine-pop-form-content input{
         padding: 7px;
-        width: 30%;
+        width: 50%;
         background-color: #f7f9fc;
         border-radius: 5px;
         border: none;
@@ -886,6 +886,16 @@
         font-weight: 550;
     }
 
+   .input-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+   }
+
+   .error-div{
+    font-size: 12px;
+   }
 
 
 
